# pdf-to-excel-tauri

./: README.md  SQLAlchemy-0.7.10-py3-none-any.whl  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
public/: piotr.enc
src/: App.tsx  (+1 more)
src-python/: main.py  old_main.py  old_util.py  process.py  pyinstaller.py  server.cert  server.key  util.py
src-tauri/: .gitignore  20241017152544_table.pdf.xlsx  20241017153515_sample-erasmus.pdf.xlsx  20241017155732_sample-erasmus.pdf_1.xlsx  20241017155732_sample-erasmus.pdf_2.xlsx  20241017180907_Recommendation-form 3.pdf.xlsx  20241018051227_اجمالي للنشر-1-1-50.pdf_1.xlsx  20241018051227_اجمالي للنشر-1-1-50.pdf_2.xlsx  20241018051227_اجمالي للنشر-1-1-50.pdf_3.xlsx  20241018052119_اجمالي للنشر-1-1-50 (1).pdf_1.xlsx  20241018052119_اجمالي للنشر-1-1-50 (1).pdf_2.xlsx  20241018052712_اجمالي للنشر-1-1-50 (1).pdf.xlsx  20241018060849_sample-erasmus.pdf.xlsx  20241031171900_piotr.pdf.xlsx  20241031171900_piotr.pdf_1.xlsx  20241031171900_piotr.pdf_2.xlsx  20241031171900_piotr.pdf_3.xlsx  20241031172304_piotr.pdf.xlsx  20241031172304_piotr.pdf_1.xlsx  20241031172304_piotr.pdf_2.xlsx  20241031172304_piotr.pdf_3.xlsx  20241031172304_piotr.pdf_4.xlsx  20241031172304_piotr.pdf_5.xlsx  20241031175626_piotr.pdf.xlsx  20241031175626_piotr.pdf_1.xlsx  20241031175626_piotr.pdf_2.xlsx  20241031175626_piotr.pdf_3.xlsx  20241031175626_piotr.pdf_4.xlsx  20241031182228_piotr.pdf.xlsx  20241031182228_piotr.pdf_1.xlsx  20241031182228_piotr.pdf_2.xlsx  20241031182228_piotr.pdf_3.xlsx  20241031182228_piotr.pdf_4.xlsx  (+68 more)
(+7 files in other folders)
